Fixed the layout of links on header collapse

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -114,6 +114,11 @@ hr {
   margin-top: 10px;
 }
 
+@media (max-width:767px) {
+  .nav_clear {
+    clear:both;
+  }
+}
 .profile_panel {
   margin-top: 10px;
 }
